--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dekko' rel='stylesheet'>
-    <title>React App</title>
+    <title>Your Thoughts</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
